# 3-oji-uzd

./: .gitignore  CMakeLists.txt  README.md  main.cpp  setup.iss  vector.hpp  vector.md
custom_vector/: cl_students.cpp  cl_students.h  file_gen.h  generator.cpp  main.cpp  main.h  output_students.cpp  output_students.h  person.h  read_students.cpp  read_students.h  student.cpp  student_test.cpp  students_calc.cpp  students_calc.h  timer.cpp  timer.h
html/: annotated.html  annotated_dup.js  classVector-members.html  classVector.html  classes.html  doxygen_crawl.html  files.html  files_dup.js  md_README.html  md_vector.html  navtreedata.js  navtreeindex0.js  pages.html  vector_8hpp_source.html
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  searchdata.js
latex/: annotated.tex  classVector.tex  files.tex  md_README.tex  md_vector.tex  refman.tex  vector_8hpp_source.tex
std_vector/: cl_students.cpp  cl_students.h  constant_definitions.h  file_gen.cpp  generator.h  inputs.cpp  inputs.h  main.cpp  main.h  output_students.cpp  output_students.h  process_settings.h  read_students.cpp  read_students.h  student.h  student_test.h  students_calc.cpp  students_calc.h
test/: main.cpp  speedtest.cpp
